# monarch-attention

./: .gitignore  LICENSE  README.md  attentions.py  configuration_vit.py  docs.md  efficient_attention.py  efficient_attention_module.py  inspect_structures.py  modeling_flax_vit.py  modeling_vit.py  pyproject.toml  pytorch_efficient_attention.py  setup.sh  solvers.py  test.ipynb  test.py  test_flax_huggingface.py
bart/: README.md  __init__.py  benchmark.py  config.py  data.py  evaluation.py  finetuned  model.py  pipeline.py  processor.py  run_summarization.py
common/: activations.py  baselines.py  logging.py  plotting.py  soba.py  utils.py
dit/: README.md  attention.py  attention_processor.py  benchmark.py  benchmark_flops.py  config.py  configuration_utils.py  custom_attention.py  custom_attention_processor.py  custom_model.py  example.py  extract.py  model.py  modeling_utils.py  pipeline.py  pipeline_dit.py  sample_fid.py  visualize_attentions.py  visualize_examples.py
examples/: pyproject.toml  test.ipynb  test2.ipynb  text.txt
examples/common/: baselines.py  data.py  logging.py  utils.py
examples/roberta/: README.md  benchmark.py  calibrate.py  data.py  debug_attention.py  evaluation.py  example.py  extract.py  find_structured_layers.py  main.py  metrics.py  model.py  models.py  pipeline.py  processor.py  sparse_roberta.py  squad_example.py  text.txt  text2.txt  utils.py  visualize_attention.py
examples/roberta_squad/: benchmark.py  calibrate.py  config.py  data.py  eval.py  extract.py  model.py  pipeline.py
examples/roberta_squad/old/: benchmark.py  data.py  debug_attention.py  models.py  sparsemax_temperature.pt  test.py  utils.py  visualize_attention.py
examples/vit/: README.md  attention_temperature.pt  attention_temperature_2.pt  baselines.py  benchmark.py  calibrate.py  calibrate_sparsemax_temp.py  calibrate_v2.py  config.py  configuration_vit.py  data.py  evaluation.py  example.py  extract.py  extract_vit_intermediates.py  metric.py  metrics.py  model.py  modeling_vit.py  models.py  monarch_vit_example.py  optimal_temperature.txt  pipeline.py  preprocessed_data.py  sparsemax_layerwise_log_attention_scale.pt  sparsemax_temperature.pt  test.py  test_monarch.py  test_monarch_vit.py  utils.py  visualize_attention.py
examples/vit/old/: benchmark.py  calibrate.py  metrics.py  test.py  utils.py  visualize_attention.py
examples/vit_imagenet/: benchmark.py  calibrate.py  config.py  eval.py  extract.py  model.py  pipeline.py  visualize_attentions.py
figures/: data.txt  plot_bart.py  plot_gps.py  plot_vit_roberta.py
gps/: README.md  benchmark.py  config.py  data.py  evaluation.py  model.py  train.py
gps_lrgb/: config.py  data.py  model.py  train.py
gps_pubmed/: benchmark.py  config.py  data.py  evaluation.py  model.py  train.py
gt/: config.py  data.py  model.py
ma/: ma_history.py  ma_torch.py  ma_triton.py  monarch_attention.py
old/: compare_implementation.py  test.ipynb  (+9 more)
(+106 files in other folders)
