[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["soba"]

[project]
name = "soba"
version = "0.0.1"
dependencies = [
    "torch",
    "opt_einsum",
    "einops",
    "torchvision",
    "torchtnt",
    "transformers",
    "evaluate",
    "scikit-learn",
    "datasets",
    "matplotlib",
    "entmax",
]
requires-python = ">=3.10"
authors = [
  {name = "Can Yaras", email = "cjyaras@gmail.com"},
]
description = "Stucture-Optimal Bidirectional Attention."
readme = "README.md"
license = {file = "LICENSE"}
keywords = []

