[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["monarch-attention"]

[project]
name = "monarch-attention"
version = "0.0.1"
dependencies = [
    "torch>=2.6.0",
    "triton==3.3.0",
    "opt_einsum",
    "einops",
    "torchvision",
    "torchtnt",
    "transformers",
    "diffusers",
    "evaluate",
    "scikit-learn",
    "datasets",
    "matplotlib",
]
requires-python = ">=3.10"
authors = [
  {name = "Can Yaras", email = "cjyaras@gmail.com"},
]
description = "Monarch attention."
readme = "README.md"
license = {file = "LICENSE"}
keywords = []

