[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vit"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "sobalib-examples"
version = "0.0.1"
dependencies = [
    "torch",
    "torchvision",
    "torchtnt",
    "transformers",
    "datasets",
    "matplotlib",
    "soba @ file://{root}/../",
]
requires-python = ">=3.10"