[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vit", "roberta", "common"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "sobalib-examples"
version = "0.0.1"
dependencies = [
    "torch",
    "torchvision",
    "torchtnt",
    "transformers",
    "evaluate",
    "scikit-learn",
    "datasets",
    "matplotlib",
    "entmax",
    "minicons",
    "soba @ file://{root}/../",
]
requires-python = ">=3.10"